[gd_scene format=3 uid="uid://bsbam5f3dg5kb"]

[ext_resource type="Script" path="res://menu_pausa.gd" id="1_jd2x8"]
[ext_resource type="AudioStream" uid="uid://cux6e4yapl5jl" path="res://Assets/Sons/Interface/touch.wav" id="2_3ml7n"]

[node name="MenuPausa" type="CanvasLayer" unique_id=1331285902]
process_mode = 3
visible = false
script = ExtResource("1_jd2x8")

[node name="ColorRect" type="ColorRect" parent="." unique_id=932016119]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5882353)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=1601201873]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=406445732]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1132112910]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Jogo Pausado"

[node name="BtnContinuar" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1681558160]
layout_mode = 2
text = "Voltar ao Jogo"

[node name="BtnMenu" type="Button" parent="CenterContainer/VBoxContainer" unique_id=468363601]
layout_mode = 2
text = "Voltar ao Menu"

[node name="SfxHover" type="AudioStreamPlayer" parent="." unique_id=390919827]
process_mode = 3
stream = ExtResource("2_3ml7n")
volume_db = -25.0

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/BtnContinuar" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnContinuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/BtnMenu" to="." method="_on_botao_mouse_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BtnMenu" to="." method="_on_btn_menu_pressed"]
